[gd_scene load_steps=4 format=3 uid="uid://gu2dowm6ujx1"]

[ext_resource type="Script" path="res://game/objects/game_items/base/base_ui.gd" id="1_gux11"]
[ext_resource type="Texture2D" uid="uid://crovglpkjvq4f" path="res://assets/ui/border.png" id="1_w4qdh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dk1dw"]

[node name="BaseUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 200.0
script = ExtResource("1_gux11")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w4qdh")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="StatusButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Status"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HelpButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Help"

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_dk1dw")
tabs_visible = false

[node name="Status" type="ScrollContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="MarginContainer/HBoxContainer/TabContainer/Status"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="CashLabel" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Status/Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cash"

[node name="Cash" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Status/Grid"]
unique_name_in_owner = true
layout_mode = 2
text = "â‚¡0"
horizontal_alignment = 2

[node name="PowerGenerationLabel" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Status/Grid"]
layout_mode = 2
text = "Power Generation"

[node name="PowerGeneration" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Status/Grid"]
unique_name_in_owner = true
layout_mode = 2
text = "0 KWh"
horizontal_alignment = 2

[node name="PowerUsageLabel" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Status/Grid"]
layout_mode = 2
text = "Power Usage"

[node name="PowerUsage" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Status/Grid"]
unique_name_in_owner = true
layout_mode = 2
text = "6 KWh"
horizontal_alignment = 2

[node name="Help" type="ScrollContainer" parent="MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TabContainer/Help"]
layout_mode = 2
size_flags_horizontal = 3
text = "This base generates 20KWH of power from its onboard nuclear reactor.

Construct mining rigs on the gas vents to harvest gas for sale. Remember to make enough power generators to keep the rigs running, or your power grid will fail."
autowrap_mode = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StatusButton" to="." method="_on_status_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
